fix: убрана min-height у кнопок, увеличен вертикальный gap в футере на мобильных

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,5 @@ details > summary::-webkit-details-marker {
   a.btn-gradient {
     padding-top: 1rem !important;
     padding-bottom: 1rem !important;
-    min-height: 3rem;
   }
 }
